--- a/pages/mundo2.html
+++ b/pages/mundo2.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="./mundo.2.css"></script>
-    <script src="./mundo.2.js"></script>
+    <link src="./mundo.2.css"></link>
+    <link src="./mundo.2.js"></link>
 </head>
-<body background="..//assets/img/depositphotos_221781440-stock-illustration-pirate-fantasy-cartoon-island-map.jpg"></i>" alt="pirata">
+
+<body background="..//assets/img/depositphotos_221781440-stock-illustration-pirate-fantasy-cartoon-island-map.jpg"
+    alt="pirata">
+
+    <div class="container1">
+        <a href="inicio"><img src="../assets/buttons/button4.jpg" width="10%" height="10%"></a>
+    </div>
+    <div class="container2">
+        <a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%"></a>
+    </div>
+    <div class="container3">
+        <a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%"></a>
+    </div>
 
 
-<a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%" ></a>
-<a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%" ></a>
-<a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%" ></a>
+
+
+
 
 
 </body>
+
 </html>
