--- a/pages/home.html
+++ b/pages/home.html
@@ -34,11 +34,11 @@
     </header>
     <main>
         <div class="d-flex justify-content-end mr-3">
-            <a href="./pages/MUNDO1.html" target="blank">
+            <a href="../pages/MUNDO1.html" target="blank">
                 <img alt="MUNDO1" src='../assets/buttons/MUNDO1.png' width="80" height="100">
             </a></div>
         <div class="d-flex justify-content-start ml-3">
-            <a href="./pages/mundo2.html" target="blank">
+            <a href="../pages/mundo2.html" target="blank">
                 <img alt="mundo2" src='../assets/buttons/mundo2.png' width="100" height="100">
             </a></div>
           
@@ -52,7 +52,7 @@
                           </div>
                         </span>
         <div class="d-flex align-items-baseline justify-content-end mr-5">
-            <a href="./pages/mundo3.html" target="blank">
+            <a href="../pages/mundo3.html" target="blank">
                 <img alt="mundo3" src='../assets/buttons/mundo3.png' width="100" height="100">
             </a></div>
     </main>
