--- a/pages/mundo2.html
+++ b/pages/mundo2.html
@@ -12,14 +12,15 @@
     alt="pirata">
 
     <div class="container1">
-        <a href="inicio"><img src="../assets/buttons/button4.jpg" width="10%" height="10%"></a>
+        <a href="inicio"><img src="../assets/buttons/button3.png" width="10%" height="10%"></a>
     </div>
     <div class="container2">
-        <a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%"></a>
+        <a href="inicio"><img src="../assets/buttons/button3.png" width="10%" height="10%"></a>
     </div>
     <div class="container3">
-        <a href="inicio"><img src="../assets/img/button3.png" width="10%" height="10%"></a>
+        <a href="inicio"><img src="../assets/buttons/button3.png" width="10%" height="10%"></a>
     </div>
+
 
 
 
