--- a/pages/mundo1.html
+++ b/pages/mundo1.html
@@ -7,6 +7,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- Navar -->
+<nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="../assets/logo/logo.png" width="110" height="40" class="d-inline-block align-top"
+                alt="logo"></a>
+
+        <div class="d-flex justify-content-end">
+            <i class="material-icons" class="d-flex justify-content-end"> volume_up</i>
+
+            <i class="material-icons" class="d-flex justify-content-end">settings_applications</i>
+
+            <i class="material-icons" class="d-flex justify-content-end">face</i>
+        </div>
+    </nav>
 </head>
 <body background="../assets/img/mapa2.jpg">
 <section class="container pagecopy d-flex align-items-center justify-content-center mb-2"></section>
@@ -20,11 +34,22 @@
 <img src ="../assets/img/mapa2.jpg" width="100%" height="" alt="parque">
 
 <!-- botonnes -->
-<a href="./mundo1.1.html" target="blank">
-    <img alt="W3Schools" src='../assets/img/beach-ball-575425_960_720.webp' width="100" height="100"></a>
-<a href="" target="blank">
-    <img alt="W3Schools" src='../assets/img/beach-ball-575425_960_720.webp' width="100" height="100"></a>
-<a href="" target="blank">
-    <img alt="W3Schools" src='../assets/img/beach-ball-575425_960_720.webp' width="100" height="100"></a>
+<div class="conteiner1" >   
+<a href ="./mundo1.1.html" target="blank">
+    <img alt="b1" src='../assets/img/beach-ball-575425_960_720.webp' width="100" height="100"></a>
+</div>
+
+
+<div class="conteiner2" >   
+<a href ="" target="blank">
+    <img alt="b2" src='../assets/img/beach-ball-575425_960_720.webp' width="100" height="100"></a>
+</div>
+    
+<div class="conteiner3" >    
+<a href ="b3" target="blank">
+    <img alt="b3" src='../assets/img/beach-ball-575425_960_720.webp' width="100" height="100"></a>
+</div>
+
+
 </body>
 </html>
