--- a/pages/mundo2.html
+++ b/pages/mundo2.html
@@ -38,12 +38,12 @@
                 <img alt="" src='../assets/img/74878554_1361277684042169_3047282453312962560_n.png' width="90" height="120">
             </a></div>
 
-        <div class="d-flex justify-content-x1-center ml-3">
+        <div class="d-flex flex-row-reverse-around ml-3">
             <a href="l" target="blank">
                 <img alt="" src='../assets/img/74878554_1361277684042169_3047282453312962560_n.png' width="90" height="120">
             </a></div>
 
-            <div class="d-flex flex-row-reverse bd-highlight ml-3">
+            <div class="container pagecopy d-flex align-items-center justify-content-center mb-2">
                 <a href="l" target="blank">
                     <img alt="" src='../assets/img/74878554_1361277684042169_3047282453312962560_n.png' width="90" height="120">
                 </a></div>
