--- a/pages/actividad3.html
+++ b/pages/actividad3.html
@@ -21,10 +21,16 @@
       <div class="card-body">
         <h5 class="card-title">¿Cuál de las siguientes sumas da como resultado 24?</h5>
         <div class="d-flex-justify-content- space-between">
-        <a href="#"class="btn boton">12+8</a>
-        <a href="#" class="btn boton">6+9</a>
-        <a href="#" class="btn boton">18+6</a>
-        <a href="#" class="btn boton">8+8</a>
+          <button id= "button1" class="boton">12 + 8</button>
+          <img width="80px" height="80px" src="../assets/answers/mal.png" alt="mal" id="mal" class= "d-none">
+          <button id= "button2" class="boton"> 6 + 9</button>
+          <img width="80px" height="80px" src="../assets/answers/mal.png" alt="mal" id="mal" class= "d-none">
+          <button id= "button3" class="boton">18 + 6</button>
+          <img width="80px" height="80px" src="../assets/answers/bien.png" alt="bien" id="bien" class= "d-none">
+          <button id= "button4" class="boton">8 + 8</button>
+          <img width="80px" height="80px" src="../assets/answers/mal.png" alt="mal" id="mal" class= "d-none">
+        </div>
+
       </div>
       </div>
     </div>
@@ -33,10 +39,14 @@
       <img src="../assets/img/4.png" class="card-img-top" alt="34">
       <div class="card-body">
         <h5 class="card-title">¿Cuál de las siguientes sumas da como resultado 34?</h5>
-        <a href="#" class="btn boton">18+10</a>
-        <a href="#" class="btn boton">5+9</a>
-        <a href="#" class="btn boton">22+12</a>
-        <a href="#" class="btn boton">9+18</a>
+        <a id= "button1" href="#" class="btn boton">18+10</a>
+        <img src="../assets/answers/mal.png" alt="mal" id="mal" class= "d-none">
+        <a id= "button2" href="#" class="btn boton">5+9</a>
+        <img src="../assets/answers/mal.png" alt="mal" id="mal" class= "d-none">
+        <a id= "button3" href="#" class="btn boton">22+12</a>
+        <img src="../assets/answers/bien.png" alt="bien" id="bien" class= "d-none">
+        <a id= "button4" href="#" class="btn boton">9+18</a>
+        <img src="../assets/answers/mal.png" alt="mal" id="mal" class= "d-none">
       </div>
     </div>
 
@@ -95,6 +105,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+  <script src="../pages/mundo3.js"></script>
 </body>
 
 </html>
