--- a/pages/mundo1.1.html
+++ b/pages/mundo1.1.html
@@ -49,25 +49,25 @@
                                         <button id="button3" type="button3" class="btn btn-danger btn-lg">3</button>
                                         <img id="imgmal" src="..//assets/answers/mal.png" alt="mal" class="d-none">
 
-                                        <button type="button4" type="button4" class="btn btn-warning btn-lg">4</button>
+                                        <button id="button4" type="button4" type="button4" class="btn btn-warning btn-lg">4</button>
                                         <img id="imgmal" src="..//assets/answers/mal.png" alt="mal" class="d-none">
 
                                 </div>
 
                                 <div class="gboton3 mr-2" role="group" aria-label="Second group">
 
-                                        <button id="button5" class="btn btn-info btn-lg">5</button>
+                                        <button id="button5"type="button5" class="btn btn-info btn-lg">5</button>
                                         <img id="imgmal" src="..//assets/answers/mal.png" alt="mal" class="d-none">
-                                        <button id="button6" class="btn btn-dark btn-lg">6</button>
+                                        <button id="button6" type="button6" class="btn btn-dark btn-lg">6</button>
 
 
                                 </div>
 
                                 <div class="gboton4" role="group" aria-label="Third group">
 
-                                        <button id="button7" class="btn btn-danger lg">7</button>
+                                        <button id="button7" type="button7" class="btn btn-danger btn-lg">7</button>
 
-                                        <button id="button8" class="btn btn-success lg">8</button>
+                                        <button id="button8" type="button8"  class="btn btn-success btn-lg">8</button>
                                 </div>
 
 
