--- a/pages/mundo1.1.html
+++ b/pages/mundo1.1.html
@@ -15,7 +15,7 @@
 <!-- titulo -->
 <h1>Da clik sobre el numero 2 </h1>
 
-<body background="../assets/img/juego1.jpg">
+<body background="../assets/img/imagenes">
         <!-- Fondo -->
         </head>
 
@@ -25,7 +25,7 @@
                 <section class="row d-flex justify-content-center alig-items-center">
 
 
-                        <img src="../assets/img/juego1.jpg" width="100%" height="" alt="parque1.1">
+                        <img src="../assets/img/hola.3.jpg" width="100%" height="" alt="parque1.1">
 
 
                         <!-- botonnes -->
